# bevy_editor_pls

./: Cargo.toml
crates/bevy_editor_pls/: Cargo.toml
crates/bevy_editor_pls_core/: Cargo.toml
crates/bevy_editor_pls_core/src/: editor.rs  lib.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
